--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2
-
+  image: ^4.5.4
+  permission_handler: ^11.3.1  
 dev_dependencies:
   flutter_test:
     sdk: flutter
