--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,11 @@ dependencies:
   flutter:
     sdk: flutter
   camera: ^0.10.5+3
-
+  foundation: ^0.0.5
   http: ^1.3.0
   provider: ^6.0.0
   shared_preferences: ^2.2.2
+  intl: ^0.18.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
